reduce space in header, remove left border logo box, fix height pagewrap %

--- a/style.less
+++ b/style.less
@@ -104,7 +104,7 @@ hr {
     width: 400px;
     float: left;
     margin-top: 35px;
-    padding: 1px 1px 1px 1px;
+    padding: 1px 1px 1px 0;
 }
 
 // #main-Navigation {
@@ -116,7 +116,7 @@ hr {
   margin-top: 35px;
   padding-top: 1px;
   display: block;
-  margin-left: 90px;
+  margin-left: 80px;
   float: left;
   padding: 0;
   padding-top:1px;
@@ -237,22 +237,27 @@ hr {
 
 .homewrap {
   min-height: 67% !important;
-  height: 67%;
+  height: 67% !important;
 }
 
 .archiveswrap {
   min-height: 67% !important;
-  height: 67%;
+  height: 67% !important;
 }
 
 .whatwrap {
-  min-height: 60% !important;
-  height: 67%;
+  min-height: 77% !important;
+  height: 77% !important;
 }
 
 .contactwrap {
-  min-height: 65% !important;
-  height: 67%;
+  min-height: 77% !important;
+  height: 77% !important;
+}
+
+.whowrap {
+  min-height: 80% !important;
+  height: 80% !important;
 }
 
 
@@ -391,9 +396,9 @@ hr {
   }
 }
 
-#tc {
-  margin-top: 40px;
-}
+// #tc {
+//   margin-top: 40px;
+// }
 
 #archives {
   h3 {
@@ -511,7 +516,7 @@ hr {
       li {
         list-style-type: none;
         float:left;
-        margin-right: 15px;
+        // margin-right: 15px;
         line-height: 10px;
 
         h4 {
